[package]
name = "dev_api"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Web API wrappers on top of actix-web"
homepage = "https://github.com/deversify/dev_api"
repository = "https://github.com/deversify/dev_api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "0.8.2", features = ["serde","v4"] }
serde = { version = "1.0.136", features = ["derive"] }
derive_more = "0.99.17"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
actix-web-httpauth = "0.6.0"
futures = "0.3.21"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = {version = "0.10.0", features = ["tonic", "tls", "tls-roots"]}
tracing-opentelemetry = { version = "0.17" }
tracing-actix-web = {version = "0.5.1", features = ["opentelemetry_0_17"]}
tonic = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
url = "2.2.2"
actix-cors = "0.6.1"
sqlx = { version = "0.5.13", features = [ "runtime-actix-native-tls" , "mysql", "postgres", "chrono", "uuid" ] }
tracing = { version = "0.1", features = ["log"]}
log = "0.4"
tracing-log = "0.1"